# lazysmg

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: event_handler.rs  lib.rs  main.rs  scanner.rs  ui.rs
src/platform/: junk_paths.toml  junk_scanner.rs  macos.rs  mod.rs
src/storage/: hdd.rs  mod.rs  ssd.rs
