[package]
name = "lazysmg"
version = "0.1.0"
authors = ["DonJordano", "Ivan Yordanov jordanov.ivan@gmail.com"]
edition = "2024"

[dependencies]
crossterm = "0.26"
ratatui = "0.20"
sysinfo = "0.28"
jwalk = "0.8.1"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
expanduser = "1.2"
